--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -21,20 +21,21 @@
   title={Drinking Water Health Advisory for the Cyanobacterial Microcystin Toxins.  EPA-820R15100},
   author={USEPA},
   year={2015},
-  publisher={Office of Water, US Environmental Protection Agency Washington, DC},
+  publisher={{Office of Water, US Environmental Protection Agency, Washington, DC}},
   url={http://www2.epa.gov/sites/production/files/2015-06/documents/microcystins-report-2015.pdf}
 }
 
-@article{chorus1999toxic,
+@book{chorus1999toxic,
   title={Toxic cyanobacteria in water: a guide to their public health consequences, monitoring and management},
   author={Chorus, Edited Ingrid and Bartram, Jamie},
   year={1999},
-  publisher={Citeseer}
+  publisher={{World Health Organization}},
+  
 }
 
 @article{world2003cyanobacterial,
   title={Cyanobacterial toxins: microcystin-LR in drinking-water. Background document for development of WHO Guidelines for Drinking-water Quality. Geneva, Switzerland},
-  author={World Health Organization},
+  author={{World Health Organization}},
   journal={World Health Organization, 2nd ed. Geneva},
   year={2003}
 }
@@ -741,7 +742,7 @@
   title={National Lakes Assessment: a collaborative survey of the Nation's lakes. EPA 841-R-09-001},
   author={USEPA},
   year={2009},
-  publisher={Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}
+  publisher={{Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}}
 }
 
 @Misc{Altmetrics,
@@ -1300,6 +1301,7 @@
 @article{paul2005development,
   title={Development of empirical, geographically specific water quality criteria: a conditional probability analysis approach},
   author={Paul, John F and McDonald, Michael E},
+  journal={Journal of the American Water Resources Association}
   year={2005},
   publisher={Wiley Online Library},
   volume={41},
